--- a/app/src/main/res/layout/fragment_step_details.xml
+++ b/app/src/main/res/layout/fragment_step_details.xml
@@ -27,23 +27,23 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/playerView"
     tools:text="2. Melt the butter and bittersweet chocolate together in a microwave or a double boiler. If microwaving, heat for 30 seconds at a time, removing bowl and stirring ingredients in between."/>
-  <ImageView
+  <Button
     android:id="@+id/iv_step_details_previous"
     android:layout_width="48dp"
     android:layout_height="48dp"
     android:layout_marginBottom="24dp"
     android:layout_marginStart="24dp"
-    android:src="@drawable/ic_previous_24dp"
+    android:background="@drawable/ic_previous_24dp"
     android:onClick="onPreviousStepClick"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"/>
-  <ImageView
-    android:id="@+id/imageView2"
+  <Button
+    android:id="@+id/iv_step_details_next"
     android:layout_width="48dp"
     android:layout_height="48dp"
     android:layout_marginBottom="24dp"
     android:layout_marginEnd="24dp"
-    android:src="@drawable/ic_next_24dp"
+    android:background="@drawable/ic_next_24dp"
     android:onClick="onNextStepClick"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"/>
