--- a/app/src/main/res/layout/fragment_step_details.xml
+++ b/app/src/main/res/layout/fragment_step_details.xml
@@ -6,26 +6,29 @@
   android:layout_height="match_parent"
   tools:context=".UI.StepDetailsFragment">
 
-  <com.google.android.exoplayer2.ui.SimpleExoPlayerView
-    android:id="@+id/playerView"
+  <com.google.android.exoplayer2.ui.PlayerView
+    android:id="@+id/exoPlayerView"
     android:layout_width="0dp"
     android:layout_height="300dp"
+    app:resize_mode="fixed_height"
     app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    />
+    app:layout_constraintTop_toTopOf="parent"/>
+
   <TextView
     android:id="@+id/tv_step_details_desc"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
+    android:layout_marginTop="24dp"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
     android:textSize="18sp"
     app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/playerView"
+    app:layout_constraintTop_toBottomOf="@+id/exoPlayerView"
     tools:text="2. Melt the butter and bittersweet chocolate together in a microwave or a double boiler. If microwaving, heat for 30 seconds at a time, removing bowl and stirring ingredients in between."/>
   <Button
     android:id="@+id/iv_step_details_previous"
