--- a/app/src/main/res/layout/fragment_recipe_steps.xml
+++ b/app/src/main/res/layout/fragment_recipe_steps.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+<androidx.core.widget.NestedScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
@@ -43,7 +43,7 @@
       android:text="@string/steps_label"
       android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rv_recipe_steps"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -51,8 +51,8 @@
       android:layout_marginStart="16dp"
       android:layout_marginEnd="16dp"
       android:layout_marginBottom="8dp">
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
   </LinearLayout>
 
-</android.support.v4.widget.NestedScrollView>
+</androidx.core.widget.NestedScrollView>
